Ensure text is aligned left by default

--- a/src/_assets/css/inline/_layout.scss
+++ b/src/_assets/css/inline/_layout.scss
@@ -37,4 +37,5 @@
 	display: table-cell;
 	padding: 0 #{$w__gutter_between / 2}px;
 	vertical-align: top;
+	text-align: left;
 }
